syntax = "proto3";

package users;

import 'common.proto';

service UsersService {
  rpc getAllUsers (AllUsersRequest) returns (AllUsersResponse);
  rpc getUser (UserRequest) returns (UserResponse);
  rpc updateUser (UpdateUserRequest) returns (UserResponse);
}

message AllUsersRequest {}
message AllUsersResponse {
  repeated common.User users = 1;
  optional common.Error error = 2;
}

message UserRequest {
  oneof identifier {
    int32 id = 1;
    string email = 2;
  }
}
message UserResponse {
  optional common.User user = 1;
  optional common.Error error = 2;
}

message UpdateUserRequest {
  int32 id = 1;
  optional string email = 2;
  optional string name = 3;
  optional string role = 4;
  optional bool is_active = 5;
  optional bool emailVerified = 6;
  optional int32 pay_count = 7;
  optional int32 pbx_extension = 8;
}
